--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Reverse Camera Keybind",
+    "name": "Reverse_Camera_Keybind",
     "version_number": "1.0.0",
     "website_url": "https://github.com/RaptureAwaits/lc-backcam",
     "description": "Gameplay mod for hit video game Lethal Company. Adds a customizable keybind that reverses the game camera, allowing you to see what's been making the second set of footsteps you've been hearing...",
